--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <h1 class="text-3xl font-bold tracking-tighter sm:text-4xl md:text-5xl text-primary-foreground">Abdelhamid Merghemi</h1>
             <h2 class="text-xl font-semibold text-primary-foreground">Flutter Mobile App Developer</h2>
             <p class="max-w-[600px] text-primary-foreground md:text-xl/relaxed lg:text-base/relaxed xl:text-xl/relaxed">
-              I'm a passionate Flutter developer with a focus on building high-quality, user-friendly mobile apps. With years of experience, I've honed my skills in creating visually stunning and highly performant applications.
+                I'm a skilled Flutter developer dedicated to crafting user-friendly mobile apps. With a solid background in Flutter, I focus on delivering efficient and visually appealing applications.
             </p>
           </div>
         </div>
