--- a/zorha.html
+++ b/zorha.html
@@ -62,7 +62,7 @@
             class="aspect-video rounded-lg object-cover"
           />
           <div class="grid gap-4">
-            <h1 class="text-3xl font-bold tracking-tighter md:text-4xl/tight">Med SELERA</h1>
+            <h1 class="text-3xl font-bold tracking-tighter md:text-4xl/tight">Zorha</h1>
             <p class="text-muted-foreground md:text-xl/relaxed lg:text-base/relaxed xl:text-xl/relaxed">
                 A modern travel app built with Flutter, featuring a clean and intuitive UI.
             </p>
