--- a/bazaar.html
+++ b/bazaar.html
@@ -62,7 +62,7 @@
             class="aspect-video rounded-lg object-cover"
           />
           <div class="grid gap-4">
-            <h1 class="text-3xl font-bold tracking-tighter md:text-4xl/tight">Med SELERA</h1>
+            <h1 class="text-3xl font-bold tracking-tighter md:text-4xl/tight">Bazaar</h1>
             <p class="text-muted-foreground md:text-xl/relaxed lg:text-base/relaxed xl:text-xl/relaxed">
                 A versatile e-commerce platform built with Flutter, designed to serve clients, admins, and sellers seamlessly.
             </p>
